data/all_generated_tests/raw_wast_tests/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2546.wast
;; 5. **Default Branch to Exported Function Following Index Calculation**:    - Test Description: Design a `br_table` instruction where the operand for the index is calculated dynamically and branches to a default target exported from another module, ensuring correct control flow and operand stack handling.    - Constraint: Tests correct index calculation and default target branching involving exports, ensuring appropriate stack unwinding and re-entry.    - Differential Reasoning: Irregularities in index calculation or stack unwinding during default labeling might reveal inconsistencies in `wizard_engine`.

(assert_invalid
  (module
    (import "mod" "func" (func $imported))
    (func $test
      (local $i i32)
      (i32.const 1)
      (local.set $i)
      (block $default (br_table 0 (local.get $i)))
      (call $imported)
    )
  )
  "unknown label"
)